Updated README.md + fixed prod error

--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     <canvas id="myCanvas" width="150" height="150">
     </canvas>
 </body>
-<script src="/js/index.js"></script>
+<script src="js/index.js"></script>
 </html>
