Implemented 3 hacker features!

--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Droid Defense</title>
-    <style>
-        * {
-            margin: 0 ;
-            padding: 0 ;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <canvas id="myCanvas" width="150" height="150">
     </canvas>
+    <button id="playPause"></button>
 </body>
 <script src="js/index.js"></script>
 </html>
