changed bg, added click for shoot, fixed prod bug

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h2><u>How to Play?</u></h2>
             <p>🔷 Use W, A, S, D keys to move the player.</p>
             <p>🔷 Move the mouse pointer anywere to aim the canon.</p>
-            <p>🔷 Press spacebar to shoot.</p>
+            <p>🔷 Press spacebar/click to shoot.</p>
             <p>🔷 Destroy the bots and the shooters as long as you can.</p>
-            <p>🔷 Health of home shown on top right. Game over if health runs out.</p>
+            <p>🔷 Health of home shown on top left. Game over if health runs out.</p>
             <h2><u>Power Ups</u></h2>
             <div><img src="./assets/explosive.png" width="20" height="20"> Makes bullets <b>explosive</b> for 5 seconds </div>
             <div><img src="./assets/regen.png" width="20" height="20"> Regenerates <b>health</b> </div>
